# PY-ELECTRUM

./: .gitignore  HISTORY.md  LICENCE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
data/currencies/: AUD.json  BGN.json  CAD.json  CHF.json  CNY.json  EUR.json  GBP.json  JPY.json  KRW.json  RON.json  RUB.json  TRY.json  USD.json  _CURRENCIES.json
docs/: Cash-Coin-Note-Arithmetics.md  Cash-Coin-Note-Fundamentals.md  Creating-Money-Instance.md  Formatting-Money-Objects.md  Money-Arithmetics-Addition.md  Money-Arithmetics-Division.md  Money-Arithmetics-Floor-Division.md  Money-Arithmetics-Modulo-Division.md  Money-Arithmetics-Modulo-Operation.md  Money-Arithmetics-Multiplication.md  Money-Arithmetics-Subtraction.md  Money-Arithmetics.md  Valid-Amount-Values.md  Valid-Currency-Values.md
electrum/: __init__.py
electrum/currency/: __init__.py  currency.py  currency_builder.py  currency_formatter.py  currency_helper.py  currency_loader.py
electrum/exceptions/: __init__.py  currency_exceptions.py  generic_exceptions.py  input_exceptions.py  money_exceptions.py  utilities_exceptions.py
electrum/handler/: __init__.py  input_handler.py
electrum/money/: _money.py  base.py  cash.py  coin.py  fmoney.py  money.py  note.py
electrum/utils/: __init__.py  assert_utils.py  converter_utils.py  datetime_utils.py  file_utils.py  input_utils.py  math_utils.py  parser_utils.py  validator_utils.py
tests/: test_coin_note_cash.py  test_fmoney.py  test_fmoney_addition.py  test_fmoney_helpers.py  test_fmoney_init.py  test_fmoney_operations.py  test_fmoney_subtraction.py  test_money_addition.py  test_money_division.py  test_money_floor_division.py  test_money_formatting.py  test_money_init.py  test_money_modulo.py  test_money_multiplication.py  test_money_subtraction.py
