[build-system]
requires = ["setuptools >= 69.0.2", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "electrum"
version = "0.3.5"
requires-python = ">=3.11.6,<3.12"
dependencies = []
authors = [{ name = "vfm-sb", email = "vfm-sb@proton.me" }]
description = "Py-Electrum Module to Work with Money, Coin, Note/Banknote, Cash, Currency, Exchange Classes and More..."
readme = "README.md"
license = { file = "LICENCE" }
keywords = ["electrum", "money", "fmoney", "coin", "note", "banknote", "cash", "currency", "exchange"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
]

[tool.setuptools]
packages = [
    "electrum", "electrum.money", "electrum.currency",
]
