[build-system]
requires = ["setuptools >= 69.0.2", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "electrum"
version = "0.3.6"
requires-python = ">=3.10"
dependencies = [
    "cerrlib==0.1.1",
    "ihandler==0.1.4.2",
    "iniconfig==2.0.0",
    "packaging==24.0",
    "pathvalidate==3.2.0",
    "pluggy==1.4.0",
    "pytest==8.1.1",
    "pyvutils==0.1.6.1",
]
authors = [{ name = "vfm-sb", email = "vfm-sb@proton.me" }]
description = "Py-Electrum Module to Work with Money, Coin, Note/Banknote, Cash, Currency, Exchange Classes and More..."
readme = "README.md"
license = { file = "LICENCE" }
keywords = ["electrum", "money", "fmoney", "coin", "note", "banknote", "cash", "currency", "exchange"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
]

[tool.setuptools]
packages = [
    "electrum", "electrum.money", "electrum.currency",
]

[project.urls]
Repository = "https://github.com/vfm-sb/PY-ELECTRUM"
Documentation = "https://github.com/vfm-sb/PY-ELECTRUM/tree/main/docs"
Changelog = "https://github.com/vfm-sb/PY-ELECTRUM/blob/main/HISTORY.md"